--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "^4.17.1",
+    "express-generator": "^4.16.1",
     "googleapis": "^67.0.0",
     "http-errors": "~1.6.3",
     "moment": "^2.29.1",
